# chatmove

./: .gitignore  README.md  README.zh-CN.md  edgelio  pyproject.toml
chatmove/: __main__.py  cli.py  ir.py  pathmap.py
chatmove/adapters/: __init__.py  base.py  claude_code.py  stubs.py
docs/: CHANGELOG.md  adding-an-adapter.md  claude-desktop-app-store.md
